<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <ProgressBar
        android:id="@+id/ProgressCircle"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
       />

    <TextView
        android:id="@+id/TextViewRegisterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_register_address"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/EditTextCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:hint="@string/hint_cep"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/TextViewRegisterAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/EditTextStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/hint_street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextCEP"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text|number"
        />

    <EditText
        android:id="@+id/EditTextNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/hint_neighborhood"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextStreet"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/EditTextCityState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/hint_city_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextNeighborhood"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/EditTextNumberr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/hint_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextCityState"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/EditTextComplement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/hint_complement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextNumberr"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_squared_agree"
        android:text="@string/button_confirm_register"
        android:textColor="@android:color/white"
        />






</android.support.constraint.ConstraintLayout>