<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_titulo_data_coleta"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/TextViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextViewTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_confirm_date"
        />

    <TextView
        android:id="@+id/TextViewHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextViewDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/text_view_confirm_hour"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"


        />

</android.support.constraint.ConstraintLayout>