<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/TextViewRegisterPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_register_admin"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextViewRegisterPerson"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/white"
        >

        <EditText
            android:id="@+id/EditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_username_register"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextInputLayoutUsername"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/white">


        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_password_register"
            android:inputType="textWebPassword"
            android:maxLength="20"
            />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextInputLayoutPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/EditTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_confirm_password"
            android:inputType="textWebPassword"
            android:maxLength="20"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextInputLayoutConfirmPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/white"
        >

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextInputLayoutEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/hint_phone"
        android:textColorHint="@android:color/white"
        >

        <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/EditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            app:mask="(**) * ****-****"
            app:notMaskedSymbol="*"
            android:maxLength="16"
            android:maxLines="1"
            android:inputType="number"
            />


    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_squared_agree"
        android:text="@string/button_confirm_register"
        android:textColor="@android:color/white"
        />


</android.support.constraint.ConstraintLayout>