<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/CardViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            android:id="@+id/TextViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/text_view_confirm_address"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/CardViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CardViewAddress"
        >

        <TextView
            android:id="@+id/TextViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/text_view_confirm_date"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/CardViewHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CardViewDate"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"

        >

        <TextView
            android:id="@+id/TextViewHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/text_view_confirm_hour"
        />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>